--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="header__inner">
       <a class="logo" href="#">
-        <img class="logo__img" src="images/logo.png" alt="logo-img">
+        <img class="logo__img" src="images/Logo.png" alt="logo-img">
       </a>
       <nav class="menu">
         <div class="menu__btn">
